updat measurement creation to compact
